--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,63 +1,63 @@
-name: Build and Deploy
-
-on:
-  push:
-    branches: [main]
-  workflow_dispatch:
-
-jobs:
-  build:
-    name: Build
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [21.x]
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node-version }}
-      - name: Install dependencies
-        run: yarn install --frozen-lockfile
-      - name: Build Dependencies
-        run: yarn build:export
-      - name: Lint
-        run: yarn lint
-      - name: Prettier
-        run: yarn prettier
-      - name: Archive production artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: out
-          path: out
-
-  deploy:
-    name: Deploy
-    needs: build
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [21.x]
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node-version }}
-      - name: Download artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: out
-          path: out
-      - name: Set up .env variables
-        run: echo "NEXT_PUBLIC_GA_TRACKING_ID=${{ secrets.GA_TRACKING_ID }}" >> $GITHUB_ENV
-      - name: Sync files to hosting
-        uses: SamKirkland/FTP-Deploy-Action@4.0.0
-        with:
-          server: ${{ secrets.FTP_SERVER }}
-          username: ${{ secrets.FTP_USERNAME }}
-          password: ${{ secrets.FTP_PASSWORD }}
-          local-dir: out/
+#name: Build and Deploy
+#
+#on:
+#  push:
+#    branches: [main]
+#  workflow_dispatch:
+#
+#jobs:
+#  build:
+#    name: Build
+#    runs-on: ubuntu-latest
+#    strategy:
+#      matrix:
+#        node-version: [21.x]
+#    steps:
+#      - name: Checkout repository
+#        uses: actions/checkout@v2
+#      - name: Setup Node.js
+#        uses: actions/setup-node@v2
+#        with:
+#          node-version: ${{ matrix.node-version }}
+#      - name: Install dependencies
+#        run: yarn install --frozen-lockfile
+#      - name: Build Dependencies
+#        run: yarn build:export
+#      - name: Lint
+#        run: yarn lint
+#      - name: Prettier
+#        run: yarn prettier
+#      - name: Archive production artifact
+#        uses: actions/upload-artifact@v2
+#        with:
+#          name: out
+#          path: out
+#
+#  deploy:
+#    name: Deploy
+#    needs: build
+#    runs-on: ubuntu-latest
+#    strategy:
+#      matrix:
+#        node-version: [21.x]
+#    steps:
+#      - name: Checkout repository
+#        uses: actions/checkout@v2
+#      - name: Setup Node.js
+#        uses: actions/setup-node@v2
+#        with:
+#          node-version: ${{ matrix.node-version }}
+#      - name: Download artifact
+#        uses: actions/download-artifact@v2
+#        with:
+#          name: out
+#          path: out
+#      - name: Set up .env variables
+#        run: echo "NEXT_PUBLIC_GA_TRACKING_ID=${{ secrets.GA_TRACKING_ID }}" >> $GITHUB_ENV
+#      - name: Sync files to hosting
+#        uses: SamKirkland/FTP-Deploy-Action@4.0.0
+#        with:
+#          server: ${{ secrets.FTP_SERVER }}
+#          username: ${{ secrets.FTP_USERNAME }}
+#          password: ${{ secrets.FTP_PASSWORD }}
+#          local-dir: out/
